syntax = "proto3";

package proto;

service Blockchain {
    rpc AddBlock(AddBlockRequest) returns (AddBlockResponse);
    rpc GetBlockchain(GetBlockchainRequest) returns (GetBlockchainResponce);
}

message AddBlockRequest {
    string data = 1;
}

message AddBlockResponse {
    string hash = 1;
}

message GetBlockchainRequest {}


message Block {
    string hash = 1;
    string prevBlockHash = 2;
    string data = 3; 
}

message GetBlockchainResponce {
    repeated Block blocks = 1;
}